# KAPTAIN

./: .gitignore  README.md  pyproject.toml
kaptain/: __init__.py  __main__.py  galaxy.py
kaptain/app/: __init__.py  command.py
kaptain/app/report/: htmlbase.py  htmlcitation.py  htmlelement.py  htmlreport.py  htmlreportsection.py  htmltablecell.py
kaptain/app/utils/: loggingutils.py  reportutils.py  snakemakeutils.py
kaptain/resources/: __init__.py  main_workflow.smk  style.css  thresholds.csv  usage.txt
kaptain/resources/citations/: Clausen_2018-kma.json  Hall_2022-rasusa.json
kaptain/resources/testdata/: query.fasta  query2.fasta
kaptain/resources/testdata/database/: database.fasta  db_lookup.tsv
kaptain/tests/: test_worfklow.py
